fixed tiny MCE; added smaller constraints for images on mobile; fixed plugin list

--- a/css/sass/_screen_max600.scss
+++ b/css/sass/_screen_max600.scss
@@ -10,6 +10,10 @@
 	@include span(12 no-gutter);
 	padding-right: 0;
 }
+#main img {
+	max-width:250px;
+	height: auto;
+}
 
 #sidebar {
 	display: none;
